examples/test/testpolicy14654.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14654
  namespace: namespace290
spec:
  podSelector:
    matchLabels:
      key42: value39
      key21: value4
      key34: value0
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value20
          key46: value45
          key26: value10
